# ai-agents

./: README.md
autogen-deep-research/: email-optimizer.ipynb  main.py  pyproject.toml  tools.py
crewai-content-pipeline/: README.md  crewai_flow.html  main.py  pyproject.toml  seo_crew.py  tools.py  virality_crew.py
crewai-content-pipeline/output/: blog_20250930_013955.txt  linkedin_20250930_013558.txt  tweet_20250930_014145.txt
crewai-job-hunter/: README.md  main.py  models.py  pyproject.toml  tools.py
crewai-job-hunter/config/: agents.yaml  tasks.yaml
crewai-job-hunter/knowledge/: resume.txt
crewai-job-hunter/output/: company_research.md  interview_prep.md  rewritten_resume.md
crewai-news-reader/: README.md  language_translate_agent.py  main.py  pyproject.toml  tools.py
crewai-news-reader/config/: agents.yaml  tasks.yaml
warm-up/: README.md  main.ipynb  main.py  pyproject.toml
